docs: update README with Lighthouse scores and fix SEO meta tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <link rel="preconnect" href="https://images.unsplash.com" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="React ve SCSS ile hazırlanmış modern, erişilebilir ve performanslı mini landing page ve bileşen kütüphanesi." />
   <title>mini-landing-lib</title>
 </head>
 
